--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,400;12..96,500;12..96,600;12..96,700;12..96,800&family=JetBrains+Mono:wght@300;400;500&display=swap" rel="stylesheet">
 <style>
   :root {
-    --bg: #f5f0e8;
-    --surface: #ffffff;
-    --surface2: #faf7f2;
-    --border: #e0d9cc;
-    --accent: #1a472a;
-    --accent-light: #2d6a4f;
-    --gold: #c9971c;
-    --gold-light: #f5c842;
-    --text: #1a1a1a;
-    --muted: #7a7165;
-    --danger: #b5342a;
-    --success: #1a472a;
-    --white: #ffffff;
-  }
+--bg: #f8fafc;
+--surface: #ffffff;
+--surface2: #f1f5f9;
+--border: #e2e8f0;
+--accent: #10b981;
+--accent-light: #34d399;
+--gold: #f59e0b;
+--gold-light: #fef3c7;
+--text: #0f172a;
+--muted: #64748b;
+--danger: #ef4444;
+--success: #10b981;
+--white: #ffffff;
+}
 
   * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -146,12 +146,14 @@
     gap: 24px;
   }
 
-  .section-card {
-    background: var(--surface);
-    border: 1px solid var(--border);
-    border-radius: 4px;
-    overflow: hidden;
-  }
+  .section-card  {
+background: var(--surface);
+border: 1px solid var(--border);
+border-radius: 16px;
+overflow: hidden;
+box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.05);
+margin-bottom: 8px;
+}
 
   .section-header {
     background: var(--surface2);
