Finalized modern UI overhaul and typography

--- a/index.html
+++ b/index.html
@@ -155,14 +155,16 @@ box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.05);
 margin-bottom: 8px;
 }
 
-  .section-header {
-    background: var(--surface2);
-    border-bottom: 1px solid var(--border);
-    padding: 14px 24px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
+  .section-.logo {
+font-weight: 800;
+font-size: 22px;
+color: var(--accent);
+letter-spacing: -0.03em;
+text-transform: none;
+display: flex;
+align-items: center;
+gap: 8px;
+}
 
   .section-num {
     background: var(--accent);
@@ -1039,7 +1041,26 @@ margin-bottom: 8px;
         <div class="empty-icon">🧮</div>
         <div class="empty-text">Fill in your income details<br>and click Calculate to see<br>your 2026 tax breakdown.</div>
       </div>`;
-  }
+ .btn-primary {
+background: var(--accent) !important;
+color: white !important;
+border: none;
+padding: 16px 32px;
+border-radius: 12px;
+font-weight: 700;
+font-size: 16px;
+cursor: pointer;
+transition: all 0.3s ease;
+box-shadow: 0 4px 14px 0 rgba(16, 185, 129, 0.3);
+width: 100%;
+margin-top: 20px;
+}
+
+.btn-primary:hover {
+background: var(--accent-light) !important;
+transform: translateY(-2px);
+box-shadow: 0 6px 20px rgba(16, 185, 129, 0.4);
+ }
 </script>
 </body>
 </html>
