--- a/index.html
+++ b/index.html
@@ -5,67 +5,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Naija Tax Calculator | Off-Clock Dude</title>
-<style>
-body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; background-color: #f8fafc; color: #1e293b; margin: 0; padding: 0; }
-.container { max-width: 1100px; margin: 0 auto; padding: 40px 20px; }
-.indigo { color: #6366f1; }
-.bg-indigo { background-color: #6366f1; color: white; }
-.card { background: white; border: 1px solid #e2e8f0; border-radius: 16px; padding: 24px; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1); }
-.hero { text-align: center; padding: 60px 20px; }
-.calc-box { max-width: 400px; margin: 0 auto; }
-input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #cbd5e1; border-radius: 8px; box-sizing: border-box; font-size: 16px; }
-button { width: 100%; padding: 14px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; font-size: 16px; transition: 0.2s; }
-button:hover { background-color: #4f46e5; }
-.grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; margin-top: 40px; }
-.profile-card { text-decoration: none; color: inherit; transition: 0.2s; border: 1px solid #f1f5f9; }
-.profile-card:hover { border-color: #6366f1; box-shadow: 0 10px 15px -3px rgba(99, 102, 241, 0.1); }
-.faq-section { max-width: 700px; margin: 60px auto; }
-.faq-item { background: white; border: 1px solid #e2e8f0; border-radius: 12px; padding: 20px; margin-bottom: 10px; }
-.discord-box { background-color: #eef2ff; border: 1px solid #e0e7ff; padding: 30px; border-radius: 24px; text-align: center; margin-top: 40px; }
-</style>
+<script src=""></script>
 </head>
-<body>
-
-<div class="hero">
-<h1 class="indigo" style="font-size: 40px; margin-bottom: 10px;">Naija Tax Calculator</h1>
-<p style="color: #64748b;">Professional PAYE calculations by Off-Clock Dude</p>
-<div class="calc-box card" style="margin-top: 30px;">
-<label style="display:block; text-align:left; font-weight:bold; font-size: 14px;">Monthly Gross Salary (₦)</label>
-<input type="number" id="monthlySalary" placeholder="e.g. 250000">
-<button class="bg-indigo" onclick="calculate()">Calculate Net Pay</button>
-<div id="result" style="display:none; margin-top:20px; border-top: 1px solid #eee; padding-top:20px;">
-<span style="color:#64748b;">Monthly Net Pay:</span>
-
-
-
-<span id="netVal" class="indigo" style="font-size: 24px; font-weight:bold;"></span>
-</div>
-</div>
-</div>
-
-<div class="container">
-<h3 style="font-size: 24px; margin-bottom: 5px;">Popular Salary Profiles</h3>
-<p style="color:#64748b; margin-bottom: 30px;">Most frequent tax calculations this week.</p>
-
-</div>
-
-<footer style="text-align:center; padding: 40px; color:#94a3b8; font-size: 12px; border-top: 1px solid #e2e8f0;">
-&copy; 2026 Off-Clock Dude. Built for sargee1.
-</footer>
-
-<script>
-function calculate() {
-let s = document.getElementById('monthlySalary').value;
-if(!s) return;
-let annual = s * 12;
-let cra = Math.max(200000, 0.01 * annual) + (0.2 * annual);
-let taxable = Math.max(0, annual - cra);
-let tax = taxable * 0.15; // Simplified logic
-let net = (annual - tax) / 12;
-document.getElementById('result').style.display = 'block';
-document.getElementById('netVal').innerText = "₦" + Math.round(net).toLocaleString();
-}
-</script>
+<body class="bg-slate-50 text-slate-900 font-sans">
 
 </body>
 </html>
