Add antialiased class to body element

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Naija Tax Calculator | Off-Clock Dude</title>
 <script src=""></script>
+<style>
+@import url('');
+body { font-family: 'Plus Jakarta Sans', sans-serif; }
+</style>
 </head>
-<body class="bg-slate-50 text-slate-900 font-sans">
+<body class="bg-slate-50 text-slate-900 antialiased">
 
 </body>
 </html>
